# CorpusFlow

./: .gitignore  AGENTS.md  Cargo.toml  README.md  myconfig.positioning.json
PROMPTS/: 00_project_bootstrap.md  01_audio_io.md  02_corpus_segmentation.md  03_descriptor_baseline.md  04_corpus_indexing.md  05_target_analysis.md  06_matching_engine.md  07_transition_cost.md  08_micro_adaptation.md  09_granular_synthesis.md  10_rendering_modes.md  11_benchmarking.md  12_refactor.md  13_release_checklist.md  INDEX.md
SKILLS/: architecture-skill.md  dsp-skill.md  performance-skill.md  prompting-skill.md  testing-skill.md
benches/: candidate_scoring.rs  descriptor_extraction.rs  greedy_matching.rs  offline_render_pipeline.rs  overlap_add_synthesis.rs
benches/common/: mod.rs
docs/: INDEX.md  architecture.md  benchmark-snapshot.md  configuration.md  descriptor-spec.md  matching-model.md  performance.md  release-notes.md  release-validation.md  token-economy.md
src/: app.rs  audio.rs  cli.rs  config.rs  corpus.rs  descriptor.rs  index.rs  lib.rs  main.rs  matching.rs  micro_adaptation.rs  rendering.rs  synthesis.rs  target.rs
tests/: audio_io.rs
