[package]
name = "corpusflow"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.5"

[dependencies]
hound = "3.5"
rustfft = "6.4"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "descriptor_extraction"
harness = false

[[bench]]
name = "overlap_add_synthesis"
harness = false
