[package]
name = "corpusflow"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.5"

[dependencies]
hound = "3.5"
rustfft = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "descriptor_extraction"
harness = false

[[bench]]
name = "overlap_add_synthesis"
harness = false

[[bench]]
name = "candidate_scoring"
harness = false

[[bench]]
name = "greedy_matching"
harness = false

[[bench]]
name = "offline_render_pipeline"
harness = false
